--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -69,6 +69,7 @@
     <Compile Include="interfaces\IQuote.cs" />
     <Compile Include="interfaces\ISymbol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="strategy\ThreeDucksStrategy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
