Load strategy settings from database

--- a/ATStrategySvc/App.config
+++ b/ATStrategySvc/App.config
@@ -1,47 +1,56 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-      <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    </configSections>
-
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
- 
-    <system.serviceModel>
-      <services>
-        <service name="AlgoTrader.strategy.ThreeDucksStrategy" behaviorConfiguration="ATStrategySvcBehavior" >
-          <host>
-            <baseAddresses>
-              <add baseAddress="http://localhost:8000/AlgoTrader/services/ATStrategySvc"/>
-            </baseAddresses>
-          </host>
-          <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IStrategy"/>
-          <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-        </service>
-       </services>
-      <behaviors>
-        <serviceBehaviors>
-          <behavior name="ATStrategySvcBehavior">
-            <serviceMetadata httpGetEnabled="true"/>
-            <serviceDebug includeExceptionDetailInFaults="true" />
-          </behavior>
-        </serviceBehaviors>
-      </behaviors>
-    </system.serviceModel>
-
-    <log4net>
-      <appender name="FileAppender" type="log4net.Appender.FileAppender">
-        <file value="ATStrategySvc.log" />
-        <appendToFile value="true" />
-        <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
-        </layout>
-      </appender>
-      <root>
-        <level value="INFO" />
-        <appender-ref ref="FileAppender" />
-      </root>
-    </log4net>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <connectionStrings>
+    <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;"/>
+  </connectionStrings>
+  <system.serviceModel>
+    <services>
+      <service name="AlgoTrader.strategy.ThreeDucksStrategy" behaviorConfiguration="ATStrategySvcBehavior">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8000/AlgoTrader/services/ATStrategySvc" />
+          </baseAddresses>
+        </host>
+        <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IStrategy" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="ATStrategySvcBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
+  <log4net>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="ATStrategySvc.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+    </root>
+  </log4net>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
