hosted PortfolioManager as a web service within the main site

--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -68,4 +68,22 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <system.serviceModel>
+    <services>
+      <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
+        <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IPortfolioManager"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="PortfolioManagerBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
+  </system.serviceModel>
 </configuration>
