--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-AlgoTraderSite-20130610193429;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AlgoTraderSite-20130610193429.mdf" />
+    <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -69,6 +70,20 @@
     </defaultConnectionFactory>
   </entityFramework>
   <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IPortfolioManager" />
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager"
+        contract="Portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager">
+        <identity>
+          <userPrincipalName value="wintermute\briguy" />
+        </identity>
+      </endpoint>
+    </client>
     <services>
       <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
         <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IPortfolioManager"/>
