--- a/AlgoTraderSite/AlgoTraderSite.csproj
+++ b/AlgoTraderSite/AlgoTraderSite.csproj
@@ -192,6 +192,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="debug.aspx" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
     <Content Include="Images\heroAccent.png" />
@@ -206,6 +207,7 @@
     <Content Include="Images\orderedList8.png" />
     <Content Include="Images\orderedList9.png" />
     <Content Include="packages.config" />
+    <Content Include="Properties\DataSources\AlgoTrader.portfolio.PositionMessage.datasource" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -237,6 +239,13 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Service References\Portfolio.Client\PortfolioManager.disco" />
+    <Content Include="Service References\Portfolio.Client\configuration91.svcinfo" />
+    <Content Include="Service References\Portfolio.Client\configuration.svcinfo" />
+    <Content Include="Service References\Portfolio.Client\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </Content>
     <Content Include="services\portfolio\PortfolioManager.svc" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -296,6 +305,13 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="debug.aspx.cs">
+      <DependentUpon>debug.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="debug.aspx.designer.cs">
+      <DependentUpon>debug.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -307,6 +323,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\Portfolio.Client\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -337,6 +358,19 @@
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Service References\Portfolio.Client\PortfolioManager.wsdl" />
+    <None Include="Service References\Portfolio.Client\PortfolioManager.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Portfolio.Client\PortfolioManager1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Portfolio.Client\PortfolioManager2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Portfolio.Client\PortfolioManager3.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -349,6 +383,12 @@
       <Project>{d1a0c6e0-d6b9-4e6d-b0b3-392ebdc3c89f}</Project>
       <Name>AlgoTrader</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\Portfolio.Client\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
