--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -1,16 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-AlgoTraderSite-20130610193429;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AlgoTraderSite-20130610193429.mdf" />
-    <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;"/>
+    <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -60,6 +61,10 @@
         <assemblyIdentity name="DotNetOpenAuth.AspNet" publicKeyToken="2780ccd10d57b246" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -73,21 +78,25 @@
     <bindings>
       <wsHttpBinding>
         <binding name="WSHttpBinding_IPortfolioManager" />
+        <binding name="WSHttpBinding_UserAgent">
+          <security mode="None">
+            <transport clientCredentialType="None" />
+            <message establishSecurityContext="false" />
+          </security>
+        </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager"
-        contract="Portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager">
-        <identity>
-          <userPrincipalName value="wintermute\briguy" />
-        </identity>
-      </endpoint>
+      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager" contract="Portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager" />
     </client>
     <services>
       <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
-        <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IPortfolioManager"/>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IPortfolioManager" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+      <service name="AlgoTrader.useragent.UserAgent" behaviorConfiguration="UserAgentBehavior">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_UserAgent" contract="AlgoTrader.Interfaces.IUserAgent" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
@@ -96,9 +105,30 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
+        <behavior name="UserAgentBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
-      multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
+  <log4net>
+    <appender name="UserAgentAppender" type="log4net.Appender.FileAppender">
+      <file value="UserAgentWeb.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="UserAgentAppender" />
+    </root>
+  </log4net>
 </configuration>
