--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -1,209 +1,108 @@
-<<<<<<< HEAD
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D1A0C6E0-D6B9-4E6D-B0B3-392EBDC3C89F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AlgoTrader</RootNamespace>
-    <AssemblyName>AlgoTrader</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="log4net">
-      <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="datamodel\Portfolio.cs" />
-    <Compile Include="datamodel\Position.cs" />
-    <Compile Include="datamodel\Quote.cs" />
-    <Compile Include="datamodel\Symbol.cs" />
-    <Compile Include="datamodel\SystemSetting.cs" />
-    <Compile Include="datamodel\Trade.cs" />
-    <Compile Include="datamodel\TraderContext.cs" />
-    <Compile Include="datamodel\WatchList.cs" />
-    <Compile Include="datamodel\WatchListItem.cs" />
-    <Compile Include="interfaces\IUserAgent.cs" />
-    <Compile Include="interfaces\IStrategyDetail.cs" />
-    <Compile Include="interfaces\IStrategy.cs" />
-    <Compile Include="interfaces\IQuoteManager.cs" />
-    <Compile Include="interfaces\IPortfolioManager.cs" />
-    <Compile Include="interfaces\IWatchList.cs" />
-    <Compile Include="interfaces\IPosition.cs" />
-    <Compile Include="interfaces\ITrade.cs" />
-    <Compile Include="interfaces\IQuote.cs" />
-    <Compile Include="interfaces\ISymbol.cs" />
-    <Compile Include="portfolio\PortfolioManager.cs" />
-    <Compile Include="portfolio\PositionMessage.cs" />
-    <Compile Include="portfolio\TradeMessage.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="strategy\SmaMetric.cs" />
-    <Compile Include="strategy\ThreeDucksStrategy.cs" />
-    <Compile Include="useragent\UserAgent.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="datamodel\db_scripts\AlgoTraderDb.sql" />
-    <Content Include="datamodel\db_scripts\Portfolios.sql" />
-    <Content Include="datamodel\db_scripts\Positions.sql" />
-    <Content Include="datamodel\db_scripts\Quotes.sql" />
-    <Content Include="datamodel\db_scripts\Symbols.sql" />
-    <Content Include="datamodel\db_scripts\SystemSettings.sql" />
-    <Content Include="datamodel\db_scripts\Trades.sql" />
-    <Content Include="datamodel\db_scripts\WatchListItems.sql" />
-    <Content Include="datamodel\db_scripts\WatchLists.sql" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-=======
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D1A0C6E0-D6B9-4E6D-B0B3-392EBDC3C89F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AlgoTrader</RootNamespace>
-    <AssemblyName>AlgoTrader</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="datamodel\Portfolio.cs" />
-    <Compile Include="datamodel\Position.cs" />
-    <Compile Include="datamodel\Quote.cs" />
-    <Compile Include="datamodel\Symbol.cs" />
-    <Compile Include="datamodel\SystemSetting.cs" />
-    <Compile Include="datamodel\Trade.cs" />
-    <Compile Include="datamodel\TraderContext.cs" />
-    <Compile Include="datamodel\WatchList.cs" />
-    <Compile Include="datamodel\WatchListItem.cs" />
-    <Compile Include="interfaces\IUserAgent.cs" />
-    <Compile Include="interfaces\IStrategyDetail.cs" />
-    <Compile Include="interfaces\IStrategy.cs" />
-    <Compile Include="interfaces\IQuoteManager.cs" />
-    <Compile Include="interfaces\IPortfolioManager.cs" />
-    <Compile Include="interfaces\IWatchList.cs" />
-    <Compile Include="interfaces\IPosition.cs" />
-    <Compile Include="interfaces\ITrade.cs" />
-    <Compile Include="interfaces\IQuote.cs" />
-    <Compile Include="interfaces\ISymbol.cs" />
-    <Compile Include="portfolio\PortfolioManager.cs" />
-    <Compile Include="portfolio\PositionMessage.cs" />
-    <Compile Include="portfolio\TradeMessage.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="strategy\SmaMetric.cs" />
-    <Compile Include="strategy\ThreeDucksStrategy.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="datamodel\db_scripts\AlgoTraderDb.sql" />
-    <Content Include="datamodel\db_scripts\Portfolios.sql" />
-    <Content Include="datamodel\db_scripts\Positions.sql" />
-    <Content Include="datamodel\db_scripts\Quotes.sql" />
-    <Content Include="datamodel\db_scripts\Symbols.sql" />
-    <Content Include="datamodel\db_scripts\SystemSettings.sql" />
-    <Content Include="datamodel\db_scripts\Trades.sql" />
-    <Content Include="datamodel\db_scripts\WatchListItems.sql" />
-    <Content Include="datamodel\db_scripts\WatchLists.sql" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
->>>>>>> 73d74a9d44d84ecf68e3339b027f1beb27721ce2
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+﻿<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+	<PropertyGroup>
+		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+		<ProductVersion>8.0.30703</ProductVersion>
+		<SchemaVersion>2.0</SchemaVersion>
+		<ProjectGuid>{D1A0C6E0-D6B9-4E6D-B0B3-392EBDC3C89F}</ProjectGuid>
+		<OutputType>Library</OutputType>
+		<AppDesignerFolder>Properties</AppDesignerFolder>
+		<RootNamespace>AlgoTrader</RootNamespace>
+		<AssemblyName>AlgoTrader</AssemblyName>
+		<TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+		<FileAlignment>512</FileAlignment>
+		<TargetFrameworkProfile />
+		<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+		<RestorePackages>true</RestorePackages>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<DebugSymbols>true</DebugSymbols>
+		<DebugType>full</DebugType>
+		<Optimize>false</Optimize>
+		<OutputPath>bin\Debug\</OutputPath>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<Prefer32Bit>false</Prefer32Bit>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+		<DebugType>pdbonly</DebugType>
+		<Optimize>true</Optimize>
+		<OutputPath>bin\Release\</OutputPath>
+		<DefineConstants>TRACE</DefineConstants>
+		<ErrorReport>prompt</ErrorReport>
+		<WarningLevel>4</WarningLevel>
+		<Prefer32Bit>false</Prefer32Bit>
+	</PropertyGroup>
+	<ItemGroup>
+		<Reference Include="EntityFramework">
+			<HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+		</Reference>
+		<Reference Include="log4net">
+			<HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+		</Reference>
+		<Reference Include="System" />
+		<Reference Include="System.ComponentModel.DataAnnotations" />
+		<Reference Include="System.Core" />
+		<Reference Include="System.Data.Entity" />
+		<Reference Include="System.Runtime.Serialization" />
+		<Reference Include="System.ServiceModel" />
+		<Reference Include="System.Xml.Linq" />
+		<Reference Include="System.Data.DataSetExtensions" />
+		<Reference Include="Microsoft.CSharp" />
+		<Reference Include="System.Data" />
+		<Reference Include="System.Xml" />
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Include="datamodel\Portfolio.cs" />
+		<Compile Include="datamodel\Position.cs" />
+		<Compile Include="datamodel\Quote.cs" />
+		<Compile Include="datamodel\Symbol.cs" />
+		<Compile Include="datamodel\SystemSetting.cs" />
+		<Compile Include="datamodel\Trade.cs" />
+		<Compile Include="datamodel\TraderContext.cs" />
+		<Compile Include="datamodel\WatchList.cs" />
+		<Compile Include="datamodel\WatchListItem.cs" />
+		<Compile Include="interfaces\IUserAgent.cs" />
+		<Compile Include="interfaces\IStrategyDetail.cs" />
+		<Compile Include="interfaces\IStrategy.cs" />
+		<Compile Include="interfaces\IQuoteManager.cs" />
+		<Compile Include="interfaces\IPortfolioManager.cs" />
+		<Compile Include="interfaces\IWatchList.cs" />
+		<Compile Include="interfaces\IPosition.cs" />
+		<Compile Include="interfaces\ITrade.cs" />
+		<Compile Include="interfaces\IQuote.cs" />
+		<Compile Include="interfaces\ISymbol.cs" />
+		<Compile Include="portfolio\PortfolioManager.cs" />
+		<Compile Include="portfolio\PositionMessage.cs" />
+		<Compile Include="portfolio\TradeMessage.cs" />
+		<Compile Include="Properties\AssemblyInfo.cs" />
+		<Compile Include="strategy\SmaMetric.cs" />
+		<Compile Include="strategy\ThreeDucksStrategy.cs" />
+		<Compile Include="useragent\UserAgent.cs" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="App.config" />
+		<None Include="packages.config" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="datamodel\db_scripts\AlgoTraderDb.sql" />
+		<Content Include="datamodel\db_scripts\Portfolios.sql" />
+		<Content Include="datamodel\db_scripts\Positions.sql" />
+		<Content Include="datamodel\db_scripts\Quotes.sql" />
+		<Content Include="datamodel\db_scripts\Symbols.sql" />
+		<Content Include="datamodel\db_scripts\SystemSettings.sql" />
+		<Content Include="datamodel\db_scripts\Trades.sql" />
+		<Content Include="datamodel\db_scripts\WatchListItems.sql" />
+		<Content Include="datamodel\db_scripts\WatchLists.sql" />
+	</ItemGroup>
+	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+		<!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
   <Target Name="AfterBuild">
   </Target>
   -->
-</Project>
+	</Project>
