--- a/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
+++ b/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WatchListTest.cs" />
     <Compile Include="PortfolioManagerTest.cs" />
     <Compile Include="SmaMetricTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
