tweaked some settings to make the "publish to IIS" option from visual studio work

--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -103,15 +103,15 @@
       <serviceBehaviors>
         <behavior name="PortfolioManagerBehavior">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="UserAgentBehavior">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
