--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -77,17 +77,23 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_IPortfolioManager" />
         <binding name="WSHttpBinding_UserAgent">
           <security mode="None">
             <transport clientCredentialType="None" />
             <message establishSecurityContext="false" />
           </security>
         </binding>
+        <binding name="WSHttpBinding_IPortfolioManager" />
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager" contract="Portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager" />
+      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager"
+        contract="Portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager">
+        <identity>
+          <userPrincipalName value="wintermute\briguy" />
+        </identity>
+      </endpoint>
     </client>
     <services>
       <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
