--- a/AlgoTrader.NUnit/App.config
+++ b/AlgoTrader.NUnit/App.config
@@ -11,4 +11,8 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <connectionStrings>
+    <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;" />
+  </connectionStrings>
+
 </configuration>
