updated EF context with an initializer. drops and re-seeds database on every run (dev config only)

--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -62,6 +62,7 @@
     <Compile Include="datamodel\SystemSetting.cs" />
     <Compile Include="datamodel\Trade.cs" />
     <Compile Include="datamodel\TraderContext.cs" />
+    <Compile Include="datamodel\TraderContextInitializer.cs" />
     <Compile Include="datamodel\WatchList.cs" />
     <Compile Include="datamodel\WatchListItem.cs" />
     <Compile Include="interfaces\IPortfolio.cs" />
