--- a/AlgoTraderSite/Web.Test.config
+++ b/AlgoTraderSite/Web.Test.config
@@ -33,4 +33,9 @@
       </customErrors>
     -->
   </system.web>
+  <entityFramework>
+    <contexts xdt:Transform="Replace">
+      <context type="AlgoTrader.datamodel.TraderContext, AlgoTrader" disableDatabaseInitialization="true"/>
+    </contexts>
+  </entityFramework>
 </configuration>
