--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -73,6 +73,11 @@
         <parameter value="v11.0" />
       </parameters>
     </defaultConnectionFactory>
+    <contexts>
+      <context type="AlgoTrader.datamodel.TraderContext, AlgoTrader">
+        <databaseInitializer type="AlgoTrader.datamodel.TraderContextInitializer, AlgoTrader"/>
+      </context>
+    </contexts>
   </entityFramework>
   <system.serviceModel>
     <bindings>
