--- a/AlgoTraderSite/Web.Release.config
+++ b/AlgoTraderSite/Web.Release.config
@@ -28,4 +28,9 @@
       </customErrors>
     -->
   </system.web>
+  <entityFramework>
+    <contexts xdt:Transform="Replace">
+      <context type="AlgoTrader.datamodel.TraderContext, AlgoTrader" disableDatabaseInitialization="true"/>
+    </contexts>
+  </entityFramework>
 </configuration>
