cleaned up the buy() method, added error checking

--- a/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
+++ b/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PortfolioRuleTests.cs" />
+    <Compile Include="TradeTests.cs" />
     <Compile Include="WatchListTest.cs" />
     <Compile Include="PortfolioManagerTest.cs" />
     <Compile Include="SmaMetricTest.cs" />
