added Alerts to data model and implemented generateAlert

--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="datamodel\Alert.cs" />
     <Compile Include="datamodel\Portfolio.cs" />
     <Compile Include="datamodel\Position.cs" />
     <Compile Include="datamodel\Quote.cs" />
