changed namespace of the strategy service

--- a/ATStrategySvc/ATStrategySvc.csproj
+++ b/ATStrategySvc/ATStrategySvc.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{FD991369-D21A-4A19-BC93-892F7D916AFA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ATStrategySvc</RootNamespace>
+    <RootNamespace>ATStrategyService</RootNamespace>
     <AssemblyName>ATStrategySvc</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -46,6 +46,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -79,6 +80,9 @@
       <Project>{d1a0c6e0-d6b9-4e6d-b0b3-392ebdc3c89f}</Project>
       <Name>AlgoTrader</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
