--- a/ATStrategySvc/App.config
+++ b/ATStrategySvc/App.config
@@ -12,6 +12,8 @@
     <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;"/>
   </connectionStrings>
   <system.serviceModel>
+    <bindings />
+    <client />
     <services>
       <service name="AlgoTrader.strategy.ThreeDucksStrategy" behaviorConfiguration="ATStrategySvcBehavior">
         <host>
