--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -89,6 +89,9 @@
           </security>
         </binding>
         <binding name="WSHttpBinding_IPortfolioManager" />
+        <binding name="WSHttpBinding_IUserAgent">
+          <security mode="None" />
+        </binding>
       </wsHttpBinding>
     </bindings>
     <client>
@@ -99,6 +102,9 @@
           <userPrincipalName value="wintermute\briguy" />
         </identity>
       </endpoint>
+      <endpoint address="http://localhost:1244/services/useragent/UserAgent.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserAgent"
+        contract="UserAgent.Client.IUserAgent" name="WSHttpBinding_IUserAgent" />
     </client>
     <services>
       <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
