--- a/AlgoTrader/App.config
+++ b/AlgoTrader/App.config
@@ -14,4 +14,18 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IUserAgent">
+          <security mode="None" />
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:1244/services/useragent/UserAgent.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserAgent"
+        contract="useragent.Client.IUserAgent" name="WSHttpBinding_IUserAgent" />
+    </client>
+  </system.serviceModel>
 </configuration>
